use constants from commons lang